# underwater-object-detection

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: notebook-yolo.ipynb  notebook.ipynb
